- Fix logic, it must check for both flags (as says the comment in the code) (bug #54912)